tuidom-macros/tests/ui/color_var_in_non_color.rs
use tuidom_macros::style;

fn main() {
    let _ = style! {
        width: --primary,
    };
}
